# yolov7-complete-repo

./: .gitattributes  .gitignore  =3.2.2  detect.py  leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml  yolov7-2.h5  yolov7.onnx
data/: coco14.yaml
leapcfg/: config.py  project_config.yaml
