[tool.poetry]
name = "yolov7"
version = "0.1.0"
description = ""
authors = ["tom Koren <tom.koren@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
code-loader = "^1.0.86"
tensorflow = "2.13.0"
code-loader-helpers = "^1.0.20"
torch = "^1.13"
torchvision = "^0.14"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
